Switch to Debian Jessie and Review Board 2.5.7

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,5 +8,5 @@ http=:8000
 static-map=/static=/var/www/reviewboard/htdocs/static
 static-map=/media=/var/www/reviewboard/htdocs/media
 static-map=/errordocs=/var/www/reviewboard/htdocs/errordocs
-static-safe=/usr/lib/python2.7/site-packages/
+static-safe=/usr/local/lib/python2.7/dist-packages/
 enable-threads=true
